add investment section

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- CTA -->
         <div class="row">
             <div class="col-12 my-5">
-                <img src="./images/ils_09.svg" class="img-fluid" alt="">
+                <img src="./images/ils_09.svg" class="img-fluid" alt="banner-image">
             </div>
         </div>
 
@@ -130,27 +130,27 @@
 
 
 
-
-
-
-
-
 <!-- counters -->
-
 <section>
     <div class="container">
         <div class="row g-4 text-center">
             <div class="col-lg-4">
-                <h3 data-target="4071" class="count">0</h3>
-                <h6>Text 1</h6>
+                <div class="number">
+                    <h3 data-target="4090" class="count display-4">0</h3>
+                    <h6>Customers</h6>
+                </div>
             </div>
             <div class="col-lg-4">
-                <h3 data-target="900" class="count">0</h3>
-                <h6>Text 1</h6>
+                <div class="number">
+                    <h3 data-target="15" class="count display-4">15</h3>
+                    <h6>Savings</h6>
+                </div>
             </div>
             <div class="col-lg-4">
-                <h3 data-target="600" class="count">0</h3>
-                <h6>Text 1</h6>
+                <div class="number">
+                    <h3 data-target="600" class="count display-4">0</h3>
+                    <h6>Investments</h6>
+                </div>
             </div>
         </div>
     </div>
@@ -158,20 +158,30 @@
 
 
 
-
-
-
-
-
 <!-- investment -->
 <section>
     <div class="container">
         <div class="row">
+            <!--1-->
             <div class="col-lg-6">
-                <div class="invest">
-                    <img src="./images/55.svg" style="width: unset;" alt="" class="mx-auto">
-                    <h4 class="my-3">Invest securely and confidently on the go.</h2>
-                    <h4 class="my-3">Up to 25% returns, in 12 months duration.</h2>
+                <div class="invest text-center">
+                    <div class="icon">
+                        <img src="./images/55.svg" style="width: unset;" alt="" class="mx-auto">
+                    </div>
+                    <h6>Invest on the go</h6>
+                    <p class="my-3">Invest securely and confidently on the go.</p>
+                    <p class="my-3">Up to 25% returns, in 12 months duration.</p>
+                </div>
+            </div>
+
+            <!--2-->
+            <div class="col-lg-6">
+                <div class="invest text-center">
+                    <div class="icon">
+                        <img src="./images/57.svg" style="width: unset;" alt="" class="mx-auto">
+                    </div>
+                    <h6>Rewards</h6>
+                    <p class="my-3">We have something for you, when you tell your friends about mustard.ng</p>
                 </div>
             </div>
         </div>
