--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
             </div>
             <div class="col-lg-4">
                 <div class="number">
-                    <h3 data-target="15" class="count display-4">15</h3>
+                    <h3 data-target="15" class="count display-4">
+
+                    </h3>
                     <h6>Savings</h6>
                 </div>
             </div>
@@ -154,6 +156,8 @@
             </div>
         </div>
     </div>
+
+    <div class="line"></div>
 </section>
 
 
@@ -161,7 +165,7 @@
 <!-- investment -->
 <section>
     <div class="container">
-        <div class="row">
+        <div class="row g-5">
             <!--1-->
             <div class="col-lg-6">
                 <div class="invest text-center">
