add aos library

--- a/index.html
+++ b/index.html
@@ -134,21 +134,21 @@
 <section>
     <div class="container">
         <div class="row g-4 text-center">
-            <div class="col-lg-4">
+            <div class="col-lg-4" data-aos="zoom-in" data-aos-easing="infinite" data-aos-duration="3000">
                 <div class="number">
                     <h3 data-target="4090" class="count display-4">0</h3>
                     <h6>Customers</h6>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4" data-aos="zoom-in" data-aos-easing="infinite" data-aos-duration="3000">
                 <div class="number">
                     <h3 data-target="15" class="count display-4">
-
+                        15
                     </h3>
                     <h6>Savings</h6>
                 </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-lg-4" data-aos="zoom-in" data-aos-easing="infinite" data-aos-duration="3000">
                 <div class="number">
                     <h3 data-target="600" class="count display-4">0</h3>
                     <h6>Investments</h6>
@@ -167,7 +167,7 @@
     <div class="container">
         <div class="row g-5">
             <!--1-->
-            <div class="col-lg-6">
+            <div class="col-lg-6" data-aos="fade-up" data-aos-easing="infinite" data-aos-duration="3000">
                 <div class="invest text-center">
                     <div class="icon">
                         <img src="./images/55.svg" style="width: unset;" alt="" class="mx-auto">
@@ -179,7 +179,7 @@
             </div>
 
             <!--2-->
-            <div class="col-lg-6">
+            <div class="col-lg-6" data-aos="fade-up" data-aos-easing="infinite" data-aos-duration="3000">
                 <div class="invest text-center">
                     <div class="icon">
                         <img src="./images/57.svg" style="width: unset;" alt="" class="mx-auto">
