--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
 <!--NavBar-->
-<nav class="navbar navbar-dark bg-white slow navbar-expand-md sticky-top divider">
+<nav class="navbar bg-white slow navbar-expand-md sticky-top divider">
     <div class="container-fluid px-5">
 
         <a href="#" class="navbar-brand">
@@ -86,18 +86,7 @@
                     <a href="#get-started" class="btn btn-brand ms-3">Create free account <i style="vertical-align: inherit;" class="ri ri-arrow-right-line"></i></a>
                 </div>
 
-            
                 <small class="fs-6 fw-bold">Already using Mustard.ng ? <a href="">Login</a></small>
-                
-                <!-- <div class="d-flex flex-wrap align-items-center">
-                    <a href="" class="me-4 mb-1 mb-md-1 play-store" style="width: 200px">
-                        <img  class="img-fluid" src="./images/googlePlay.png" alt="">
-                    </a>
-                    <a href="" class="play-store" style="width: 200px">
-                        <img class="img-fluid" src="./images/appStoreBlack.png" alt="">
-                    </a>
-                </div> -->
-
 
             </div>
 
@@ -193,7 +182,82 @@
 </section>
 
 
+<!-- Features -->
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="section-title">
+                <h6>Features</h6>
+                <h1 class="display-3 lead">We've got ton of features to give you the best</h1>
+            </div>
+        </div>
 
+        <div class="row g-5 my-3 text-center">
+            <!-- 1 -->
+            <div class="col-lg-4">
+                <div class="features">
+                    <h5>Dedicated accountability manager</h5>
+                    <p>After registration, get someone assigned to your account, an actual person who looks after you and your savings, to make sure you acheive your saving goal in no time.</p>
+                </div>
+            </div>
+            <!-- 2 -->
+            <div class="col-lg-4">
+                <div class="features">
+                    <h5>Save automatically</h5>
+                    <p>Choose between automatic daily, weekly or monthly savings. Once you choose, our system does the rest for you. You’re in control, and can always change your settings anytime.</p>
+                </div>
+            </div>
+            <!-- 3 -->
+            <div class="col-lg-4">
+                <div class="features">
+                    <h5>Manual Topups</h5>
+                    <p>Don't fancy automatic savings? No problem, you can manually top up your savings at anytime, anywhere.</p>
+                </div>
+            </div>
+            <!-- 4 -->
+            <div class="col-lg-4">
+                <div class="features">
+                    <h5>Easy investment</h5>
+                    <p>With minimum investments starting as low as N5,000, investment is no longer out of reach. Everyone is welcome.</p>
+                </div>
+            </div>
+            <!-- 5 -->
+            <div class="col-lg-4">
+                <div class="features">
+                    <h5>Invest confidently</h5>
+                    <p>All listed investments are properly due diligenced and highly secured opportunities.</p>
+                </div>
+            </div>
+            <!-- 6 -->
+            <div class="col-lg-4">
+                <div class="features">
+                    <h5>High yield returns</h5>
+                    <p>Enjoy up to 25% returns on properly vetted investment plans.</p>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+    <div class="line"></div>
+</section>
+
+
+
+<!-- Story -->
+<section>
+    <div class="container">
+        <div class="row">
+            <div class="section-title">
+                <h5>Our Story</h5>
+            </div>
+        </div>
+        <div class="row g-4 my-3">
+            <div class="col-lg-4"></div>
+            <div class="col-lg-7"></div>
+        </div>
+    </div>
+</section>
 
 <!--Review-->
 <section class="bg-gray" style="background-color: #F8F9FD;">
