--- a/index.html
+++ b/index.html
@@ -249,12 +249,29 @@
     <div class="container">
         <div class="row">
             <div class="section-title">
-                <h5>Our Story</h5>
+                <h1>Our Story</h1>
             </div>
         </div>
         <div class="row g-4 my-3">
-            <div class="col-lg-4"></div>
-            <div class="col-lg-7"></div>
+            <div class="col-lg-7">
+                <div class="">
+                    <img class="img-fluid" src="./images/ils_11.svg" alt="">
+                </div>
+            </div>
+            <div class="col-lg-5">
+                <div class="story">
+                    <p>Mustard means something small with the potential to grow into something large or vast. Here at Mustard.ng, every mustard matters and your mustard can give you a tree tomorrow.</p>
+                </div>
+                <div class="story">
+                    <p>Mustard.ng is on a path to help everyone, even those with a little mustard seed to grow into a large tree through savings and investment.</p>
+                </div>
+                <div class="story">
+                    <p>Mustard.ng intends on making you financially safer. We know the pain that comes with seeing money leave and not being able to explain it.</p>
+                </div>
+                <div class="story">
+                    <p>We care about your spending habits. We intend on making you financially free and we intend to be the best. It's all love from Mustard.ng</p>
+                </div>
+            </div>
         </div>
     </div>
 </section>
