start second cta

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./remixicons/fonts/remixicon.css">
 
 
-    <link rel="shortcut icon" type="image/jpg" href="./images/Mustard logo new.png" style="width: unset;"/>
+    <link rel="shortcut icon" type="image/png" href="./images/Mustard logo new.png" style="width: 50px;"/>
 
 
     <link rel="stylesheet" href="./style.css">
@@ -107,13 +107,6 @@
 
 
 
-<section>
-    <div class="container">
-        <div class="row">
-            <h3 class="display-4 fw-bolder text-center">Smart Investments + Referral Bonus = a better life.</h3>
-        </div>
-    </div>
-</section>
 
 
 
@@ -148,6 +141,16 @@
 
     <div class="line"></div>
 </section>
+
+
+
+<div class="container">
+    <div class="row py-5">
+        <h3 class="display-4 fw-bolder text-center">Smart Investments + Referral Bonus = a better life.</h3>
+    </div>
+</div>
+
+
 
 
 
@@ -204,7 +207,7 @@
             <div class="col-lg-4">
                 <div class="features">
                     <h5>Save automatically</h5>
-                    <p>Choose between automatic daily, weekly or monthly savings. Once you choose, our system does the rest for you. You’re in control, and can always change your settings anytime.</p>
+                    <p>Choose between automatic daily, weekly or monthly savings. Once you choose, our system does the rest for you. You're in control, and can always change your settings anytime.</p>
                 </div>
             </div>
             <!-- 3 -->
@@ -253,12 +256,12 @@
             </div>
         </div>
         <div class="row g-4 my-3">
-            <div class="col-lg-7">
+            <div class="col-lg-6 col-md-4" data-aos="fade-left" data-aos-easing="infinite" data-aos-duration="1000">
                 <div class="">
                     <img class="img-fluid" src="./images/ils_11.svg" alt="">
                 </div>
             </div>
-            <div class="col-lg-5">
+            <div class="col-lg-5 offset-lg-1" data-aos="fade-right" data-aos-easing="infinite" data-aos-duration="1000">
                 <div class="story">
                     <p>Mustard means something small with the potential to grow into something large or vast. Here at Mustard.ng, every mustard matters and your mustard can give you a tree tomorrow.</p>
                 </div>
@@ -272,6 +275,16 @@
                     <p>We care about your spending habits. We intend on making you financially free and we intend to be the best. It's all love from Mustard.ng</p>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+
+<!-- CTA -2 -->
+<section>
+    <div class="container">
+        <div class="row">
+            
         </div>
     </div>
 </section>
