--- a/index.html
+++ b/index.html
@@ -283,8 +283,14 @@
 <!-- CTA -2 -->
 <section>
     <div class="container">
-        <div class="row">
-            
+        <div class="row py-5 px-5" style="background-color: black; color: white;">
+            <div class="col-lg-4">
+                <h6>Ready, set...go!</h6>
+                <h1>Create a free account</h1>
+            </div>
+            <div class="col-lg-6 offset-lg-1">
+
+            </div>
         </div>
     </div>
 </section>
