--- a/index.html
+++ b/index.html
@@ -324,61 +324,34 @@
     <div class="container">
         <div class="row gy-4">
 
-            <div class="col-lg-3">
-                <h4>Finnacle</h4>
-                <p>We're on a mission to help everyone move their finances forward and gain financial momentum.</p>
-                <div class="social-links">
-                    <a href=""><i class="ri-facebook-fill"></i></a>
-                    <a href=""><i class="ri-twitter-fill"></i></a>
-                    <a href=""><i class="ri-github-fill"></i></a>
-                    <a href=""><i class="ri-youtube-fill"></i></a>
-                </div>
-                <div class="d-flex flex-wrap align-items-center">
-                    <a href="" class="me-4 mb-1 mb-md-1 play-store" style="width: 100px">
-                        <img  class="img-fluid" src="./images/googlePlay.png" alt="">
-                    </a>
-                    <a href="" class="play-store" style="width: 100px">
-                        <img class="img-fluid" src="./images/appStoreBlack.png" alt="">
-                    </a>
-                </div>
+            <div class="col-lg-4">
+                <img src="./images/Mustard logo new.png" alt="" style="width: 160px;">                
             </div>
 
 
             <div class="col-lg-2 offset-lg-1">
-                <h6>Services</h6>
+                <h5>Services</h5>
                 <ul>
-                    <li><a href="">Credit Reports</a></li>
-                    <li><a href="">Credit Cards</a></li>
-                    <li><a href="">Loans</a></li>
-                    <li><a href="">Mortgages</a></li>
-                </ul>
-            </div>
-            <div class="col-lg-2">
-                <h6>Company</h6>
-                <ul>
-                    <li><a href="">About Us</a></li>
-                    <li><a href="">Careers</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Complaints</a></li>
-                </ul>
-            </div>
-            <div class="col-lg-2">
-                <h6>Guidance</h6>
-                <ul>
+                    <li><a href="">Invest</a></li>
+                    <li><a href="">Rewards</a></li>
                     <li><a href="">FAQs</a></li>
-                    <li><a href="">Guides</a></li>
-                    <li><a href="">Blog</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-2">
+                <h6>Usage</h6>
+                <ul>
+                    <li><a href="">Terms</a></li>
+                </ul>
+            </div>
+            <div class="col-lg-2">
+                <h6>Contact Info</h6>
+                <ul>
+                    <li><a href="">live chat active from 9am - 5pm</a></li>
+                    <li><a href="">hi@mustard.ng</a></li>
                     <li><a href="">Press</a></li>
                 </ul>
             </div>
-            <div class="col-lg-2">
-                <h6>Legal</h6>
-                <ul>
-                    <li><a href="">Privacy</a></li>
-                    <li><a href="">T&Cs</a></li>
-                    <li><a href="">Cookies</a></li>
-                </ul>
-            </div>
+
         </div>
     </div>
 </footer>
