add finishing touches

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 <div class="container">
     <div class="row py-5">
-        <h3 class="display-4 fw-bolder text-center">Smart Investments + Referral Bonus = a better life.</h3>
+        <strong class="display-4 fw-bolder text-center">Smart Investments + Referral Bonus = a better life.</strong>
     </div>
 </div>
 
@@ -299,16 +299,20 @@
 <!-- CTA -2 -->
 <section>
     <div class="container">
-        <div class="row py-5 px-5" style="background-color: black; color: white;">
+        <div class="row cta-padding" style="background-color: black; color: white;">
             <div class="col-lg-4">
                 <h6>Ready, set...go!</h6>
-                <h1>Create a free account</h1>
+                <h1 class="fs-2">Create a free account</h1>
             </div>
             <div class="col-lg-6 offset-lg-1">
-                <a href="" class="btn btn-outline-brand">
+                <a href="" class="btn btn-outline-brand" style="border-radius: 6px;">
                     Create free account
                 </a>
-                <div class="fs-6" style="font-weight: 500;">Already using Mustard.ng? <a href="">Login</a></div>
+                <div class="fs-6 my-4" style="font-weight: 500;">
+                    <p>
+                        Already using Mustard.ng? <a href="">Login</a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
@@ -330,7 +334,7 @@
 
 
             <div class="col-lg-2 offset-lg-1">
-                <h5>Services</h5>
+                <h4>Services</h4>
                 <ul>
                     <li><a href="">Invest</a></li>
                     <li><a href="">Rewards</a></li>
@@ -338,13 +342,13 @@
                 </ul>
             </div>
             <div class="col-lg-2">
-                <h6>Usage</h6>
+                <h4>Usage</h4>
                 <ul>
                     <li><a href="">Terms</a></li>
                 </ul>
             </div>
             <div class="col-lg-2">
-                <h6>Contact Info</h6>
+                <h4>Contact Info</h4>
                 <ul>
                     <li><a href="">live chat active from 9am - 5pm</a></li>
                     <li><a href="">hi@mustard.ng</a></li>
