--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@
                     <h6>Invest on the go</h6>
                     <p class="my-3">Invest securely and confidently on the go.</p>
                     <p class="my-3">Up to 25% returns, in 12 months duration.</p>
+                    <a href="">
+                        <img src="./images/56.svg" alt="" style="width: unset;">
+                    </a>
                 </div>
             </div>
 
@@ -176,6 +179,9 @@
                     </div>
                     <h6>Rewards</h6>
                     <p class="my-3">We have something for you, when you tell your friends about mustard.ng</p>
+                    <a href="">
+                        <img src="./images/56.svg" alt="" style="width: unset;">
+                    </a>
                 </div>
             </div>
         </div>
