--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <link rel="stylesheet" href="./remixicons/fonts/remixicon.css">
 
 
-    <link rel="shortcut icon" type="image/png" href="./images/Mustard logo new.png" style="width: 50px;"/>
+    <link rel="shortcut icon" type="image/png" href="./public/favicon.ico" class="img-fluid"/>
 
 
     <link rel="stylesheet" href="./style.css">
 
 
-    <title>Document</title>
+    <title>Mustard</title>
 </head>
 <body data-bs-spy="scroll" data-bs-target=".navbar">
 
