change selection color

--- a/index.html
+++ b/index.html
@@ -274,11 +274,11 @@
     <div class="container">
         <div class="row">
             <div class="section-title">
-                <h1>Our Story</h1>
+                <h1 class="story-header">Our Story</h1>
             </div>
         </div>
         <div class="row g-4 my-3">
-            <div class="col-lg-6 col-md-4" data-aos="fade-left" data-aos-easing="infinite" data-aos-duration="1000">
+            <div class="col-lg-6 col-md-12" data-aos="fade-left" data-aos-easing="infinite" data-aos-duration="1000">
                 <div class="">
                     <img class="img-fluid" src="./images/ils_11.svg" alt="">
                 </div>
