add image bottom

--- a/index.html
+++ b/index.html
@@ -274,7 +274,8 @@
     <div class="container">
         <div class="row">
             <div class="section-title">
-                <h1 class="story-header">Our Story</h1>
+                <h1 class="display-3">Our Story</h1>
+                <img src="./images/line-shape-2.svg" alt="" style="width: 20%;" class="ms-5">
             </div>
         </div>
         <div class="row g-4 my-3">
