add image bottom

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 
         <div class="row g-5 my-3 text-center">
             <!-- 1 -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-6">
                 <div class="features">
                     <div class="icon">
                         <img src="./images/94.svg" alt="">
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <!-- 2 -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-6">
                 <div class="features">
                     <div class="icon">
                         <img src="./images/95.svg" alt="">
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <!-- 3 -->
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-sm-6">
                 <div class="features">
                     <div class="icon">
                         <img src="./images/96.svg" alt="">
@@ -231,7 +231,7 @@
                 </div>
             </div>
             <!-- 4 -->
-            <div class="col-lg-4" data-aos="fade-up" data-aos-easing="infinite" data-aos-duration="1000">
+            <div class="col-lg-4 col-sm-6" data-aos="fade-up" data-aos-easing="infinite" data-aos-duration="1000">
                 <div class="features">
                     <div class="icon">
                         <img src="./images/97.svg" alt="">
@@ -241,7 +241,7 @@
                 </div>
             </div>
             <!-- 5 -->
-            <div class="col-lg-4" data-aos="fade-up" data-aos-easing="infinite" data-aos-duration="2000">
+            <div class="col-lg-4 col-sm-6" data-aos="fade-up" data-aos-easing="infinite" data-aos-duration="2000">
                 <div class="features">
                     <div class="icon">
                         <img src="./images/98.svg" alt="">
@@ -251,7 +251,7 @@
                 </div>
             </div>
             <!-- 6 -->
-            <div class="col-lg-4" data-aos="fade-up" data-aos-easing="infinite" data-aos-duration="3000">
+            <div class="col-lg-4 col-sm-6" data-aos="fade-up" data-aos-easing="infinite" data-aos-duration="3000">
                 <div class="features">
                     <div class="icon">
                         <img src="./images/99.svg" alt="">
